schedule: Fix controls alignment in narrow layouts

--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -4,12 +4,37 @@
   .box-shadow(0, 0, 0, 1px, @gray-lighter);
   z-index: 4; // The content may clip, this ensures the separator and dropdown is always visible
 
-  h2 {
+  > * {
+    margin-bottom: .5em;
+  }
+
+  strong {
+    font-size: 1.333em;
+  }
+
+  .button-link i.icon {
     display: inline;
+
+    &::before {
+      display: inline;
+      margin-right: 0;
+    }
   }
 
   .schedule-controls {
     float: right;
+    min-height: 2em;
+
+    display: inline-flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    gap: .5em;
+
+    .suggestion-element-group .suggestion-element-icon,
+    .suggestion-element-group .suggestion-element {
+      height: 2em;
+      line-height: 1;
+    }
 
     .view-mode-switcher {
       margin-bottom: 0;
